# ML-Credit-Scoring

./: .deploymentignore  .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
.devcontainer/: devcontainer.json
.github/workflows/: azure-deploy.yml
.streamlit/: config.toml
config/: mlflow_config.py
notebooks/: 01_data_exploration.ipynb  01_mlflow_setup.ipynb  02_feature_engineering.ipynb  03_dummy_classifier.ipynb  04_random_forest.ipynb  05_lightgbm.ipynb  06_model_serving_test.ipynb  README.md
scripts/: create_sample_dataset.py  start_mlflow.sh  start_mlflow_server.py
src/api/: README.md  __init__.py  api.py  streamlit_app.py
src/dataset/: client_ids_sample_1000.json  feature_names.json
src/models/: best_params_lightgbm.json  lgbm_best_model.pkl  lgbm_results.pkl
src/utils/: feature_io.py  mlflow_utils.py  notebook_mlflow.py  stats.py  traitemant_outliers.py
tests/: __init__.py  test_api.py
